# zora3

./: AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  compose.yml  loop.sh  pyproject.toml
docs/: ralph.md
specs/: core.md
src/zora/: __init__.py  __main__.py  cli.py  pipeline.py
src/zora/capture/: __init__.py  file.py  screenshot.py
src/zora/models/: __init__.py  assignment.py  board.py  campaign.py  ship.py
src/zora/vision/: __init__.py  detect.py  extract.py  regions.py
tests/: conftest.py  test_capture.py  test_cli.py  test_models.py  test_pipeline.py  test_vision_detect.py  test_vision_extract.py  test_vision_regions.py
