[project]
name = "zora"
version = "0.1.0"
description = "Star Trek Online Admiralty Board Reader"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "pytesseract>=0.3.13",
]

[project.scripts]
zora = "zora.cli:main"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zora"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]
